--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <header>
         <div class="container">
             <div class="header_main">
-                
+                <div class="header_logo"></div>
+                <nav>
+                    <ul class="">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
