add header list

--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
     <header>
         <div class="container">
             <div class="header_main">
-                <div class="header_logo"></div>
+                <div class="header_logo">
+                    <img src="" alt="">
+                </div>
                 <nav>
-                    <ul class="">
+                    <ul class="header_list">
+                       <a href="#">
                         <li></li>
+                       </a>
+                       <a href="#">
                         <li></li>
+                       </a>
+                       <a href="#">
                         <li></li>
+                       </a>
+                       <a href="#">
                         <li></li>
+                       </a>
                     </ul>
                 </nav>
+                
             </div>
         </div>
     </header>
