add header btns

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                        </a>
                     </ul>
                 </nav>
-                
+                <div class="header_btns">
+                    <button class="header_btn"></button>
+                    <button class="header_btn"></button>
+                </div>
             </div>
         </div>
     </header>
