--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
 <body>
     <header>
         <div class="container">
-            <div class="header_main">
+            <div class="header_main flex">
                 <div class="header_logo">
-                    <img src="" alt="">
+                    <img src="./img/header_logo.png" alt="">
                 </div>
                 <nav>
                     <ul class="header_list">
                        <a href="#">
-                        <li></li>
+                        <li>PRODUCTS</li>
                        </a>
                        <a href="#">
-                        <li></li>
+                        <li>FEATURES</li>
                        </a>
                        <a href="#">
-                        <li></li>
+                        <li>RESOURCES</li>
                        </a>
                        <a href="#">
-                        <li></li>
+                        <li>MORE</li>
                        </a>
                     </ul>
                 </nav>
                 <div class="header_btns">
-                    <button class="header_btn"></button>
-                    <button class="header_btn"></button>
+                    <button class="header_btn">SIGN UP</button>
+                    <button class="header_btn">TRY FOR FREE</button>
                 </div>
             </div>
         </div>
