add header flex

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img src="./img/header_logo.png" alt="">
                 </div>
                 <nav>
-                    <ul class="header_list">
+                    <ul class="header_list flex">
                        <a href="#">
                         <li>PRODUCTS</li>
                        </a>
@@ -29,7 +29,7 @@
                        </a>
                     </ul>
                 </nav>
-                <div class="header_btns">
+                <div class="header_btns flex">
                     <button class="header_btn">SIGN UP</button>
                     <button class="header_btn">TRY FOR FREE</button>
                 </div>
