add section children

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             </div>
         </div>
     </header>
+    <section class="children">
+        <div class="container">
+            
+        </div>
+    </section>
 </body>
 
 </html>
