--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
                     </ul>
                 </nav>
                 <div class="header_btns flex">
-                    <button class="header_btn">SIGN UP</button>
-                    <button class="header_btn">TRY FOR FREE</button>
+                    <button class="btn header_btn">SIGN UP</button>
+                    <button class="btn header_btn">TRY FOR FREE</button>
                 </div>
             </div>
         </div>
     </header>
     <section class="children">
         <div class="container">
-            
+            <h1 class="sec_tit child_sec">He twilight</h1>
+            <p class="child_txt">This text is an example of text that can be replaced in the same space. This text was generated from the Arabic text generator, where you can generate such text or many other texts in addition to increasing the number of letters that the application generates.</p>
+            <button class="btn"></button>
         </div>
     </section>
 </body>
