added a block oneFooter

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             </div>
         </div>
     </header>
+
+    <section class="oneFooter">
+        <div class="container">
+
+        </div>
+    </section>
+
 </body>
 
 </html>
