add text to children btn

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <h1 class="sec_tit child_sec">He twilight</h1>
             <p class="child_txt">This text is an example of text that can be replaced in the same space. This text was generated from the Arabic text generator, where you can generate such text or many other texts in addition to increasing the number of letters that the application generates.</p>
-            <button class="btn"></button>
+            <button class="btn children_btn">Contribute now</button>
         </div>
     </section>
 </body>
