added the tag card_home

--- a/index.html
+++ b/index.html
@@ -44,9 +44,21 @@
         </div>
     </header>
 
+
+
+
+    <!-- amal -->
     <section class="oneFooter">
         <div class="container">
-
+            <div class="card_home">
+                <div class="home_title">
+                    <span class="span_home">Testimonals</span>
+                    <h2 class="home_tit">What our clients have been saying about us.</h2>
+                    <div class="slaider">
+                        
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
