creaster the tag  slaider_one__img

--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
                     <span class="span_home">Testimonals</span>
                     <h2 class="home_tit">What our clients have been saying about us.</h2>
                     <div class="slaider">
-                        
+                        <div class="slaider_one__img">
+                            <img src=".//img/slaiderOne.jpeg" alt="">
+                        </div>
+                        <div class="slaider_two__img">
+                            <img src=".//img/slaiderTwo.jpeg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
