created  the slaider

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <h2 class="home_tit">What our clients have been saying about us.</h2>
                     <div class="slaider">
                         <div class="slaider_one__img">
-                            <img src=".//img/slaiderOne.jpeg" alt="">
+                            <img class="vectror" src=".//img/svg/slaider1.svg" alt="">
                         </div>
                         <div class="slaider_two__img">
-                            <img src=".//img/slaiderTwo.jpeg" alt="">
+                            <img class="vectror_two" src=".//img/svg/slaider2.svg" alt="">
                         </div>
                     </div>
                 </div>
