created the white_box

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
                             <img class="vectror_two" src=".//img/svg/slaider2.svg" alt="">
                         </div>
                     </div>
+                    <div class="white_box">
+                        <span class="span_box">Arcu viverra ut quis gravida luctus. Scelerisque elit massa purus morbi pellentesque tincidunt nulla. Aliquet molestie felis consectetur cras. Sit est facilisi pharetra quisque. Scelerisque elit massa purus morbi pellentesque tincidunt nulla. That’s amazing!</span>
+                        <div class="white_tab">
+                            <div class="img_man">
+                                <img src=".//img/svg/man.svg" alt="">
+                            </div>
+                            <h4 class="sp_man">James Smith</h4>
+                            <span class="span_man">Designer @flowbase.co</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
