--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
                         </div>
                     </div>
                     <div class="white_box">
-                        <span class="span_box">Arcu viverra ut quis gravida luctus. Scelerisque elit massa purus morbi pellentesque tincidunt nulla. Aliquet molestie felis consectetur cras. Sit est facilisi pharetra quisque. Scelerisque elit massa purus morbi pellentesque tincidunt nulla. That’s amazing!</span>
+                        <span class="span_box">Arcu viverra ut quis gravida luctus. Scelerisque elit massa purus morbi
+                            pellentesque tincidunt nulla. Aliquet molestie felis consectetur cras. Sit est facilisi
+                            pharetra quisque. Scelerisque elit massa purus morbi pellentesque tincidunt nulla. That’s
+                            amazing!</span>
                         <div class="white_tab">
                             <div class="img_man">
                                 <img src=".//img/svg/man.svg" alt="">
@@ -76,6 +79,23 @@
             </div>
         </div>
     </section>
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer_card">
+            <div class="footer_box">
+                <h2 class="footer_tit">Sera</h2>
+                <p class="footer_pgp">Lorem ipsum dolor sit amet, consectetur adip elit.
+                    Posuere dolor massa, pellentesque aliquam nisl facilisis sed.</p>
+            </div>
+            <div class="apps">
+                <div class="app">
+                    <img src=".//img/svg/apps.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 
