created the apps

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                 <div class="app">
                     <img src=".//img/svg/apps.svg" alt="">
                 </div>
+                <div class="app">
+                    <img src=".//img/svg/apps.svg" alt="">
+                </div>
+                <div class="app">
+                    <img src=".//img/svg/apps.svg" alt="">
+                </div>
             </div>
         </div>
     </div>
