created the footer_like

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     <div class="container">
         <div class="footer_card">
             <div class="footer_box">
-                <h2 class="footer_tit">Sera</h2>
+                <h2 class="footer_tit">Sera</h2 >
+                    <img class="footer_like" src=".//img/svg/footer_like.svg" alt="">
                 <p class="footer_pgp">Lorem ipsum dolor sit amet, consectetur adip elit.
                     Posuere dolor massa, pellentesque aliquam nisl facilisis sed.</p>
             </div>
