added  find section and container

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         </div>
     </section>
 
+    <!-- Ramazan -->
+
+    <section class="Find_section">
+        <div class="container">
+            
+        </div>
+    </section>
 
 
 
@@ -96,6 +103,8 @@
             </div>
         </div>
     </section>
+
+
 
 <footer class="footer">
     <div class="container">
