--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 
     <section class="Find_section">
         <div class="container">
-            
+            <div class="adress_blocks">
+                
+            </div>
+
         </div>
     </section>
 
