--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
                     <a class="adress_tel" href="tel:0704499465">+996 704 499 465</a>
                    </div>
                    </div>
+
+                   <div class="adress_block">
+                    <div class="adress_icon_block">
+                    </div>
+                    <div class="adress_block_flex">
+                    <div class="adress_name">Phone</div>
+                    <a class="adress_tel" href="tel:0704499465">+996 704 499 465</a>
+                   </div>
+                   </div>
+
+                   <div class="adress_block">
+                    <div class="adress_icon_block">
+                    </div>
+                    <div class="adress_block_flex">
+                    <div class="adress_name">Phone</div>
+                    <a class="adress_tel" href="tel:0704499465">+996 704 499 465</a>
+                   </div>
+                   </div>
             </div>
 
         </div>
