added find_title HTML

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                    </div>
             </div>
 
+            <h1 class="find_title">Let's find the latest <br> news today!</h1>
+
         </div>
     </section>
 
