added  find_tabs_block HTML

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 
             <h1 class="find_title">Let's find the latest <br> news today!</h1>
 
+            <div class="find_tabs_block">
+                
+            </div>
+
         </div>
     </section>
 
