--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
             <h1 class="find_title">Let's find the latest <br> news today!</h1>
 
             <div class="find_tabs_block">
-                
+                <div class="find_tab" onclick="find_openTab(event, 'find_tab1')">الكل</div>
+                <div class="find_tab" onclick="find_openTab(event, 'find_tab2')">Humans</div>
+                <div class="find_tab" onclick="find_openTab(event, 'find_tab3')">Animal</div>
+                <div class="find_tab" onclick="find_openTab(event, 'find_tab4')">Abstract</div>
+                <div class="find_tab" onclick="find_openTab(event, 'find_tab5')">Random</div>
             </div>
 
         </div>
