added find_tab1 HTML

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
             </div>
             </div>
 
+            <div id="find_tab1" class="find_tab-content">
+                <div class="find_tab_imgs_block">
+                  <img class="find_tab_img_1" src="img/Снимок экрана 2024-03-15 132122.png" alt="">
+                </div>
+              </div>
+
         </div>
     </section>
 
