added find_tab2 HTML

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                   <img class="find_tab_img_1" src="img/Снимок экрана 2024-03-15 132122.png" alt="">
                 </div>
               </div>
+              <div id="find_tab2" class="find_tab-content">
+                Содержимое вкладки 2
+              </div>
 
         </div>
     </section>
