added find_tab3 HTML

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
               <div id="find_tab2" class="find_tab-content">
                 Содержимое вкладки 2
               </div>
+              <div id="find_tab3" class="find_tab-content">
+                Содержимое вкладки 3
+              </div>
 
         </div>
     </section>
