added find_tab4 HTML

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
               <div id="find_tab3" class="find_tab-content">
                 Содержимое вкладки 3
               </div>
+              <div id="find_tab4" class="find_tab-content">
+                Содержимое вкладки 4
+              </div>
 
         </div>
     </section>
