ADDED find_tab5 HTML

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
               <div id="find_tab4" class="find_tab-content">
                 Содержимое вкладки 4
               </div>
+              <div id="find_tab5" class="find_tab-content">
+                Содержимое вкладки 5
+              </div>
 
         </div>
     </section>
