--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
         <div class="container">
             <div class="header_main flex">
-                <div class="header_logo">
+                <!-- <div class="header_logo">
                     <img src="./img/header_logo.png" alt="">
-                </div>
+                </div> -->
                 <nav>
                     <ul class="header_list flex">
                         <a href="#">
