added index imgs for find tabs

--- a/index.html
+++ b/index.html
@@ -154,8 +154,15 @@
             </div>
 
             <div id="find_tab1" class="find_tab-content">
-                <div class="find_tab_imgs_block">
-                    <img class="find_tab_img_1" src="img/screen_find_photo.png" alt="">
+                <div class="find_tabs_page1">
+                    <video class="find_tabs_video-1" autoplay loop muted src="Happy Women's Day!.mp4"></video>
+                    <img class="find_tabs_img-1" src="img/find_tabs-img-1.png" alt="">
+                    <img class="find_tabs_img-2" src="img/find_tabs-img-2.png" alt="">
+                    <img class="find_tabs_img-3" src="img/find_tabs-img-3.png" alt="">
+                    <img class="find_tabs_img-4" src="img/find_tabs-img-4.png" alt="">
+                    <img class="find_tabs_img-5" src="img/find_tabs-img-5.png" alt="">
+                    <img class="find_tabs_img-6" src="img/find_tabs-img-6.png" alt="">
+                    <img class="find_tabs_img-7" src="img/find_tabs-img-7.png" alt="">
                 </div>
             </div>
             <div id="find_tab2" class="find_tab-content">
@@ -221,15 +228,17 @@
                         Posuere dolor massa, pellentesque aliquam nisl facilisis sed.</p>
                 </div>
                 <div class="apps">
-                    <div class="app">
+                    <a class="app" href="">
                         <img src=".//img/svg/apps.svg" alt="">
-                    </div>
-                    <div class="app">
+                    </a>
+  
+                    <a class="app" href="">
                         <img src=".//img/svg/apps.svg" alt="">
-                    </div>
-                    <div class="app">
+                    </a>
+
+                    <a class="app" href="">
                         <img src=".//img/svg/apps.svg" alt="">
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
