added animation tabs imgs

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
             <div id="find_tab1" class="find_tab-content">
                 <div class="find_tabs_page1">
                     <video class="find_tabs_video-1" autoplay loop muted src="videos/Happy Women's Day!.mp4"></video>
-                    <img class="find_tabs_img-1" src="img/find_tabs-img-1.png" alt="">
-                    <img class="find_tabs_img-2" src="img/find_tabs-img-2.png" alt="">
-                    <img class="find_tabs_img-3" src="img/find_tabs-img-3.png" alt="">
-                    <img class="find_tabs_img-4" src="img/find_tabs-img-4.png" alt="">
-                    <img class="find_tabs_img-5" src="img/find_tabs-img-5.png" alt="">
-                    <img class="find_tabs_img-6" src="img/find_tabs-img-6.png" alt="">
-                    <img class="find_tabs_img-7" src="img/find_tabs-img-7.png" alt="">
+                    <img class="find_tabs_img-1 find_tab_img" src="img/find_tabs-img-1.png" alt="">
+                    <img class="find_tabs_img-2 find_tab_img" src="img/find_tabs-img-2.png" alt="">
+                    <img class="find_tabs_img-3 find_tab_img" src="img/find_tabs-img-3.png" alt="">
+                    <img class="find_tabs_img-4 find_tab_img" src="img/find_tabs-img-4.png" alt="">
+                    <img class="find_tabs_img-5 find_tab_img" src="img/find_tabs-img-5.png" alt="">
+                    <img class="find_tabs_img-6 find_tab_img" src="img/find_tabs-img-6.png" alt="">
+                    <img class="find_tabs_img-7 find_tab_img" src="img/find_tabs-img-7.png" alt="">
                 </div>
             </div>
             <div id="find_tab2" class="find_tab-content">
