--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'><link rel="stylesheet" href="./amal/animation.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -15,6 +17,8 @@
 </head>
 
 <body>
+
+
     <!-- ilim -->
     <header>
         <div class="container">
@@ -45,70 +49,90 @@
             </div>
         </div>
     </header>
-    <section class="children">
-        <div class="container">
-            <div class="children_main flex"><!-- Slider main container -->
-                <div class="swiper">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide">
-                            <div class="children_right flex">
-                                <h1 class="sec_tit child_sec">He twilight</h1>
-                                <p class="child_txt">This text is an example of text that can be replaced in the same
-                                    space. This
-                                    text
-                                    was generated from the Arabic text generator, where you can generate such text or
-                                    many other
-                                    texts
-                                    in addition to increasing the number of letters that the application generates.</p>
-                                <button class="btn children_btn">Contribute now</button>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="children_right flex">
-                                <h1 class="sec_tit child_sec">He twilight</h1>
-                                <p class="child_txt">This text is an example of text that can be replaced in the same
-                                    space. This
-                                    text
-                                    was generated from the Arabic text generator, where you can generate such text or
-                                    many other
-                                    texts
-                                    in addition to increasing the number of letters that the application generates.</p>
-                                <button class="btn children_btn">Contribute now</button>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="children_right flex">
-                                <h1 class="sec_tit child_sec">He twilight</h1>
-                                <p class="child_txt">This text is an example of text that can be replaced in the same
-                                    space. This
-                                    text
-                                    was generated from the Arabic text generator, where you can generate such text or
-                                    many other
-                                    texts
-                                    in addition to increasing the number of letters that the application generates.</p>
-                                <button class="btn children_btn">Contribute now</button>
-                            </div>
-                        </div>
-                        ...
+    <div class="app">
+        <div class="cardList">
+            <button class="cardList__btn btn btn--left">
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="#arrow-left"></use>
+                    </svg>
+                </div>
+            </button>
+            <div class="cards__wrapper">
+                <div class="card current--card">
+                    <div class="card__image">
+                        <img src=".//img/children_img.jpg" alt="" />
                     </div>
-                    <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
-
-                    <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-
-                    <!-- If we need scrollbar -->
-                    <div class="swiper-scrollbar"></div>
+                </div>
+                <div class="card next--card">
+                    <div class="card__image">
+                        <img src=".//img/children_img.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="card previous--card">
+                    <div class="card__image">
+                        <img src=".//img/children_img.jpg" alt="" />
+                    </div>
+                </div>
+            </div>
+            <button class="cardList__btn btn btn--right">
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="#arrow-right"></use>
+                    </svg>
+                </div>
+            </button>
+        </div>
+        <div class="infoList">
+            <div class="info__wrapper">
+                <div class="info current--info">
+                    <h1 class="text name">He twilight</h1>
+                    <p class="text description">This text is an example of text that can be replaced in the same space.</p>
+                </div>
+                <div class="info next--info">
+                    <h1 class="text name">He twilight</h1>
+                    <p class="text description">This text is an example of text that can be replaced in the same space.</p>
+                </div>
+                <div class="info previous--info">
+                    <h1 class="text name">He twilight</h1>
+                    <p class="text description">This text is an example of text that can be replaced in the same space.</p>
                 </div>
             </div>
         </div>
-    </section>
+        <div class="app__bg">
+            <div class="app__bg__image current--image">
+                <img src=".//img/children_img.jpg" alt="" />
+            </div>
+            <div class="app__bg__image next--image">
+                <img src=".//img/children_img.jpg" alt="" />
+            </div>
+            <div class="app__bg__image previous--image">
+                <img src=".//img/children_img.jpg" alt="" />
+            </div>
+        </div>
+    </div>
+    <div class="loading__wrapper">
+        <div class="loader--text">Loading...</div>
+        <div class="loader">
+            <span></span>
+        </div>
+    </div>
+    <svg class="icons" style="display: none;">
+        <symbol id="arrow-left" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
+            <polyline points='328 112 184 256 328 400'
+                         style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
+        </symbol>
+        <symbol id="arrow-right" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
+            <polyline points='184 112 328 256 184 400'
+                         style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
+        </symbol>
+    </svg>
+
+    <!-- partial -->
+      <script src='https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js'></script><script  src="./amal/slider.js"></script>
 
     <!-- Ramazan -->
-
     <section class="Find_section">
         <div class="container">
             <div class="adress_blocks">
@@ -181,8 +205,6 @@
         </div>
     </section>
 
-
-
     <!-- amal -->
     <section class="oneFooter">
         <div class="container">
@@ -215,8 +237,6 @@
             </div>
         </div>
     </section>
-
-
 
     <footer class="footer">
         <div class="container">
