create a neew animation on nav

--- a/index.html
+++ b/index.html
@@ -28,18 +28,21 @@
                 </div> -->
                 <nav>
                     <ul class="header_list flex">
-                        <a href="#">
-                            <li>PRODUCTS</li>
-                        </a>
-                        <a href="#">
-                            <li>FEATURES</li>
-                        </a>
-                        <a href="#">
-                            <li>RESOURCES</li>
-                        </a>
-                        <a href="#">
-                            <li>MORE</li>
-                        </a>
+                        <li>
+                            <a href="#">Home</a>
+                          </li>
+                          <li>
+                            <a href="#">About</a>
+                          </li>
+                          <li>
+                            <a href="#">Skills</a>
+                          </li>
+                          <li>
+                            <a href="#">Portfolio</a>
+                          </li>
+                          <li>
+                            <a href="#">Contacts</a>
+                          </li>
                     </ul>
                 </nav>
                 <div class="header_btns flex">
@@ -248,15 +251,15 @@
                         Posuere dolor massa, pellentesque aliquam nisl facilisis sed.</p>
                 </div>
                 <div class="apps">
-                    <a class="app" href="">
+                    <a class="apper" href="">
                         <img src=".//img/svg/apps.svg" alt="">
                     </a>
   
-                    <a class="app" href="">
+                    <a class="apper" href="">
                         <img src=".//img/svg/apps.svg" alt="">
                     </a>
 
-                    <a class="app" href="">
+                    <a class="apper" href="">
                         <img src=".//img/svg/apps.svg" alt="">
                     </a>
                 </div>
