create the new index.html

--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
                     </ul>
                 </nav>
                 <div class="header_btns flex">
-                    <button class="btn header_btn">SIGN UP</button>
-                    <button class="btn header_btn">TRY FOR FREE</button>
+                    <a class="btn header_btn" href="sign.html">SIGN UP</a>
+                    <!-- <button   class="btn header_btn">SIGN UP</button> -->
+                    <button class="btn header_btn">DONATE</button>
                 </div>
             </div>
+            
         </div>
     </header>
     <div class="app">
