--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </ul>
                 </nav>
                 <div class="header_btns flex">
-                    <a class="btn header_btn" href="sign.html">SIGN UP</a>
+                    <a class="btn header_btn" target="_blank" href="sign.html">SIGN UP</a>
                     <!-- <button   class="btn header_btn">SIGN UP</button> -->
                     <button class="btn header_btn">DONATE</button>
                 </div>
