To connect page Donate

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <div class="header_btns flex">
                     <a class="btn header_btn" target="_blank" href="sign.html">SIGN UP</a>
                     <!-- <button   class="btn header_btn">SIGN UP</button> -->
-                    <button class="btn header_btn">DONATE</button>
+                    <a href="donate_page.html">  <button class="btn header_btn">DONATE</button></a>
+                  
                 </div>
             </div>
             
