--- a/donate_page.html
+++ b/donate_page.html
@@ -31,7 +31,7 @@
                 </nav>
                 <div class="header_btns flex">
                     <button class="btn header_btn">SIGN UP</button>
-                    <button class="btn header_btn">TRY FOR FREE</button>
+                    <button class="btn header_btn">DONATE</button>
                 </div>
             </div>
         </div>
