--- a/donate_page.html
+++ b/donate_page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>donate_page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="amal/animation.css">
 </head>
 <body>
     <header>
@@ -37,5 +38,7 @@
         </div>
     </header>
     
+    <script src="index.js"></script>
+
 </body>
 </html>
