change the classes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'><link rel="stylesheet" href="./amal/animation.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'>
+    <link rel="stylesheet" href="./amal/animation.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -29,29 +30,29 @@
                     <ul class="header_list flex">
                         <li>
                             <a href="#">Home</a>
-                          </li>
-                          <li>
+                        </li>
+                        <li>
                             <a href="#">About</a>
-                          </li>
-                          <li>
+                        </li>
+                        <li>
                             <a href="#">Skills</a>
-                          </li>
-                          <li>
+                        </li>
+                        <li>
                             <a href="#">Portfolio</a>
-                          </li>
-                          <li>
+                        </li>
+                        <li>
                             <a href="#">Contacts</a>
-                          </li>
+                        </li>
                     </ul>
                 </nav>
                 <div class="header_btns flex">
-                    <a class="btn header_btn" target="_blank" href="sign.html">SIGN UP</a>
+                    <a class="btn header_btn" target="_blank" href=".//SignUp/sign.html">SIGN UP</a>
                     <!-- <button   class="btn header_btn">SIGN UP</button> -->
-                    <a href="donate_page.html">  <button class="btn header_btn">DONATE</button></a>
-                  
+                    <a href="donate_page.html"> <button class="btn header_btn">DONATE</button></a>
+
                 </div>
             </div>
-            
+
         </div>
     </header>
     <div class="app">
@@ -92,15 +93,18 @@
             <div class="info__wrapper">
                 <div class="info current--info">
                     <h1 class="text name">He twilight</h1>
-                    <p class="text description">This text is an example of text that can be replaced in the same space.</p>
+                    <p class="text description">This text is an example of text that can be replaced in the same space.
+                    </p>
                 </div>
                 <div class="info next--info">
                     <h1 class="text name">He twilight</h1>
-                    <p class="text description">This text is an example of text that can be replaced in the same space.</p>
+                    <p class="text description">This text is an example of text that can be replaced in the same space.
+                    </p>
                 </div>
                 <div class="info previous--info">
                     <h1 class="text name">He twilight</h1>
-                    <p class="text description">This text is an example of text that can be replaced in the same space.</p>
+                    <p class="text description">This text is an example of text that can be replaced in the same space.
+                    </p>
                 </div>
             </div>
         </div>
@@ -125,17 +129,18 @@
     <svg class="icons" style="display: none;">
         <symbol id="arrow-left" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
             <polyline points='328 112 184 256 328 400'
-                         style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
+                style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
         </symbol>
         <symbol id="arrow-right" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
             <polyline points='184 112 328 256 184 400'
-                         style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
+                style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
         </symbol>
     </svg>
 
     <!-- partial -->
-      <script src='https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js'></script><script  src="./amal/slider.js"></script>
+    <script src='https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js'></script>
+    <script src="./amal/slider.js"></script>
 
     <!-- Ramazan -->
     <section class="Find_section">
@@ -184,7 +189,8 @@
 
             <div id="find_tab1" class="find_tab-content">
                 <div class="find_tabs_page1">
-                    <video class="find_tabs_video-1 find_tab_img" autoplay loop muted src="videos/Happy Women's Day!.mp4"></video>
+                    <video class="find_tabs_video-1 find_tab_img" autoplay loop muted
+                        src="videos/Happy Women's Day!.mp4"></video>
                     <img class="find_tabs_img-1 find_tab_img" src="img/find_tabs-img-1.png" alt="">
                     <img class="find_tabs_img-2 find_tab_img" src="img/find_tabs-img-2.png" alt="">
                     <img class="find_tabs_img-3 find_tab_img" src="img/find_tabs-img-3.png" alt="">
@@ -256,7 +262,7 @@
                     <a class="apper" href="">
                         <img src=".//img/svg/apps.svg" alt="">
                     </a>
-  
+
                     <a class="apper" href="">
                         <img src=".//img/svg/apps.svg" alt="">
                     </a>
