--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <header>
         <div class="container">
             <div class="header_main flex">
-                <!-- <div class="header_logo">
+                <div class="header_logo">
                     <img src="./img/header_logo.png" alt="">
-                </div> -->
+                </div>
                 <nav>
                     <ul class="header_list flex">
                         <li>
@@ -48,11 +48,10 @@
                 <div class="header_btns flex">
                     <a class="btn header_btn" target="_blank" href=".//SignUp/sign.html">SIGN UP</a>
                     <!-- <button   class="btn header_btn">SIGN UP</button> -->
-                    <a href="donate_page.html"> <button class="btn header_btn">DONATE</button></a>
+                    <a href="donate_page.html"> <button class="btn header_btner">DONATE</button></a>
 
                 </div>
             </div>
-
         </div>
     </header>
     <div class="app">
