change the slider version two

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'>
+    <link rel="stylesheet" href="amal/slider_v2.css">
     <link rel="stylesheet" href="./amal/animation.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -216,37 +217,30 @@
     </section>
 
     <!-- amal -->
-    <section class="oneFooter">
-        <div class="container">
-            <div class="card_home">
-                <div class="home_title">
-                    <span class="span_home">Testimonals</span>
-                    <h2 class="home_tit">What our clients have been saying about us.</h2>
-                    <div class="slaider">
-                        <div class="slaider_one__img">
-                            <img class="vectror" src=".//img/svg/slaider1.svg" alt="">
-                        </div>
-                        <div class="slaider_two__img">
-                            <img class="vectror_two" src=".//img/svg/slaider2.svg" alt="">
-                        </div>
-                    </div>
-                    <div class="white_box">
-                        <span class="span_box">Arcu viverra ut quis gravida luctus. Scelerisque elit massa purus morbi
-                            pellentesque tincidunt nulla. Aliquet molestie felis consectetur cras. Sit est facilisi
-                            pharetra quisque. Scelerisque elit massa purus morbi pellentesque tincidunt nulla. That’s
-                            amazing!</span>
-                        <div class="white_tab">
-                            <div class="img_man">
-                                <img src=".//img/svg/man.svg" alt="">
-                            </div>
-                            <h4 class="sp_man">James Smith</h4>
-                            <span class="span_man">Designer @flowbase.co</span>
-                        </div>
-                    </div>
-                </div>
+<section>
+    <div class="container-sm">
+        <div class="slider">
+          
+          <!-- 
+            <div
+            class="item"
+            style="background-image: url('./assets/images/slide-1.jpg')"
+          >
+            <div class="content">
+              <div class="name">Algún lugar</div>
+              <div class="description">Descripción del lugar</div>
             </div>
+          </div> -->
+          <!-- <div class="buttons">
+            <button> Prev</button>
+            <button> Next</button>
+          </div> -->
+  
+  
+  
         </div>
-    </section>
+      </div>
+</section>
 
     <footer class="footer">
         <div class="container">
@@ -275,6 +269,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="amal/slide_v-2.js"></script>
 
     <script src="index.js"></script>
 </body>
