created on animation on links

--- a/index.html
+++ b/index.html
@@ -252,23 +252,20 @@
                         Posuere dolor massa, pellentesque aliquam nisl facilisis sed.</p>
                 </div>
                 <div class="apps">
-                    <a class="apper" href="">
-                        <img src=".//img/svg/apps.svg" alt="">
-                    </a>
-
-                    <a class="apper" href="">
-                        <img src=".//img/svg/apps.svg" alt="">
-                    </a>
-
-                    <a class="apper" href="">
-                        <img src=".//img/svg/apps.svg" alt="">
-                    </a>
+                    <ul class="container-md">
+                        <li class="links"><a href="#" class="link"><i class="fa fa-telegram"></i></a></li>
+                        <li class="links"><a href="#" class="link"><i class="fa fa-instagram"></i></a></li>
+                        <li class="links"><a href="#" class="link"><i class="fa fa-phone"></i></a></li>
+                        <li class="links"><a href="#" class="link"><i class="fa fa-linkedin"></i></a></li>
+                        <li class="links"><a href="#" class="link"><i class="fa fa-github"></i></a></li>
+                      </ul>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="amal/slide_v-2.js"></script>
 
     <script src="index.js"></script>
