change the header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- ilim -->
     <header>
         <div class="container">
+           <div class="header">
             <div class="header_main flex">
                 <div class="header_logo">
                     <img src="./img/header_logo.png" alt="">
@@ -53,6 +54,7 @@
 
                 </div>
             </div>
+           </div>
         </div>
     </header>
     <div class="app">
@@ -267,7 +269,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="amal/slide_v-2.js"></script>
-
+<script src="amal/scroll.js"></script>
     <script src="index.js"></script>
 </body>
 
