--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <!-- Ramazan -->
     <section class="Find_section">
-        <div class="container">
+        <div class="container reveal">
             <div class="adress_blocks">
                 <div class="adress_block">
                     <div class="adress_icon_block">
@@ -220,7 +220,7 @@
 
     <!-- amal -->
 <section>
-    <div class="container-sm">
+    <div class="container-sm reveal">
         <div class="slider">
           
           <!-- 
@@ -245,7 +245,7 @@
 </section>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container reveal">
             <div class="footer_card">
                 <div class="footer_box">
                     <h2 class="footer_tit">Sera</h2>
@@ -254,7 +254,7 @@
                         Posuere dolor massa, pellentesque aliquam nisl facilisis sed.</p>
                 </div>
                 <div class="apps">
-                    <ul class="container-md">
+                    <ul class="container-md reveal">
                         <li class="links"><a href="#" class="link"><i class="fa fa-telegram"></i></a></li>
                         <li class="links"><a href="#" class="link"><i class="fa fa-instagram"></i></a></li>
                         <li class="links"><a href="#" class="link"><i class="fa fa-phone"></i></a></li>
@@ -270,6 +270,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="amal/slide_v-2.js"></script>
 <script src="amal/scroll.js"></script>
+<script src="amal/scrallbolls/scrollball.js"></script>
     <script src="index.js"></script>
 </body>
 
