added the target:_blank on tag donate_page.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="header_btns flex">
                     <a class="btn header_btn" target="_blank" href=".//SignUp/sign.html">SIGN UP</a>
                     <!-- <button   class="btn header_btn">SIGN UP</button> -->
-                    <a href="donate_page.html"> <button class="btn header_btner">DONATE</button></a>
+                    <a href="donate_page.html" target="_blank"> <button class="btn header_btner">DONATE</button></a>
 
                 </div>
             </div>
