--- a/index.html
+++ b/index.html
@@ -31,19 +31,16 @@
                 <nav>
                     <ul class="header_list flex">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="#">PRODUCTS</a>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="#">FEATURES</a>
                         </li>
                         <li>
-                            <a href="#">Skills</a>
+                            <a href="#">RESOURCES</a>
                         </li>
                         <li>
-                            <a href="#">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#">Contacts</a>
+                            <a href="#">MORE</a>
                         </li>
                     </ul>
                 </nav>
