--- a/donate_page.html
+++ b/donate_page.html
@@ -9,33 +9,37 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="header_main flex">
-                <!-- <div class="header_logo">
-                    <img src="./img/header_logo.png" alt="">
-                </div> -->
-                <nav>
-                    <ul class="header_list flex">
-                        <a href="#">
-                            <li>PRODUCTS</li>
-                        </a>
-                        <a href="#">
-                            <li>FEATURES</li>
-                        </a>
-                        <a href="#">
-                            <li>RESOURCES</li>
-                        </a>
-                        <a href="#">
-                            <li>MORE</li>
-                        </a>
-                    </ul>
-                </nav>
-                <div class="header_btns flex">
-                    <button class="btn header_btn">SIGN UP</button>
-                    <button class="btn header_btn">DONATE</button>
-                </div>
+        <div class="container" >
+            <div class="header" ">
+             <div class="header_main flex" >
+                 <div class="header_logo">
+                     <img src="./img/header_logo.png" alt="">
+                 </div>
+                 <nav>
+                     <ul class="header_list flex">
+                         <li>
+                             <a href="#">PRODUCTS</a>
+                         </li>
+                         <li>
+                             <a href="#">FEATURES</a>
+                         </li>
+                         <li>
+                             <a href="#">RESOURCES</a>
+                         </li>
+                         <li>
+                             <a href="#">MORE</a>
+                         </li>
+                     </ul>
+                 </nav>
+                 <div class="header_btns flex">
+                     <a class="btn header_btn" target="_blank" href=".//SignUp/sign.html">SIGN UP</a>
+                     <!-- <button   class="btn header_btn">SIGN UP</button> -->
+                     <a href="donate_page.html" target="_blank"> <button class="btn header_btner">DONATE</button></a>
+ 
+                 </div>
+             </div>
             </div>
-        </div>
+         </div>
     </header>
     
     <script src="index.js"></script>
