some changed nav

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <nav>
                     <ul class="header_list flex">
                         <li>
-                            <a href="#">PRODUCTS</a>
+                            <a href="#">MENU</a>
                         </li>
                         <li>
-                            <a href="#">FEATURES</a>
+                            <a href="#">CONTACT US</a>
                         </li>
                         <li>
                             <a href="#">RESOURCES</a>
